# rotero

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dioxus.toml  LICENSE-APACHE  LICENSE-MIT  README.md  justfile
.claude/projects/-Users-pohsuanlai-Documents-rotero/memory/: MEMORY.md  user_goals.md
.github/workflows/: ci.yml  release.yml
assets/: base.css  buttons.css  chat.css  components.css  detail.css  dialogs.css  fonts.css  graph.css  graph.js  icon.icns  inputs.css  layout.css  library.css  longpress.js  pdf.css  sidebar.css  style.css  theme.css  tokens.css
crates/rotero-bib/: Cargo.toml
crates/rotero-bib/src/: citation.rs  export.rs  import.rs  import_bibtex.rs  import_csl.rs  import_nbib.rs  import_ris.rs  lib.rs
crates/rotero-connector/: Cargo.toml
crates/rotero-connector/src/: handlers.rs  lib.rs  scrape.rs
crates/rotero-connector/tests/: cite_api_test.rs
crates/rotero-db/: Cargo.toml
crates/rotero-db/src/: annotations.rs  collections.rs  crr.rs  graph.rs  lib.rs  notes.rs  papers.rs  saved_searches.rs  schema.rs  sync_test_helpers.rs  tags.rs
crates/rotero-db/src/crr/: helpers.rs  merge.rs  mod.rs  schema.rs  state.rs  tracking.rs
crates/rotero-db/src/schema/: migrations.rs  mod.rs  tables.rs
crates/rotero-db/tests/: crr_robustness_test.rs  crr_sync_test.rs
crates/rotero-graph/: Cargo.toml
crates/rotero-graph/src/: data.rs  edges.rs  lib.rs
crates/rotero-mcp/: Cargo.toml
crates/rotero-mcp/src/: db.rs  lib.rs  main.rs  server.rs
crates/rotero-mcp/src/server/: mod.rs  params.rs  tools.rs
crates/rotero-models/: Cargo.toml
crates/rotero-models/src/: annotation.rs  collection.rs  lib.rs  note.rs  paper.rs  queries.rs  saved_search.rs  tag.rs
crates/rotero-pdf/: Cargo.toml
crates/rotero-pdf/src/: annotations.rs  lib.rs  renderer.rs  text_extract.rs
crates/rotero-pdf/src/text_extract/: font.rs  mod.rs  search.rs  segments.rs
crates/rotero-search/: Cargo.toml
crates/rotero-search/src/: arxiv.rs  crossref.rs  indexer.rs  lib.rs  openalex.rs  parser.rs  query.rs  semantic_scholar.rs  unpaywall.rs
crates/rotero-translate/: Cargo.toml
crates/rotero-translate/src/: lib.rs  node.rs  server.rs  translator.rs
extension/: content.js  manifest.json  popup.html  popup.js
scripts/: bench_memory.sh
src/: app.rs  cache.rs  main.rs  updates.rs
src/agent/: connection.rs  helpers.rs  install.rs  mod.rs  node.rs  session.rs  types.rs
src/app/: chat_handler.rs  library_loader.rs  mod.rs  sync_loop.rs  update_checker.rs
src/db/: annotations.rs  collections.rs  graph.rs  mod.rs  notes.rs  papers.rs  queries.rs  saved_searches.rs  schema.rs  tags.rs
src/init/: connector.rs  database.rs  logging.rs  mcp.rs  mod.rs  window.rs
src/metadata/: arxiv.rs  crossref.rs  doi_extract.rs  enrich.rs  mod.rs  openalex.rs  parser.rs  pdf_download.rs  semantic_scholar.rs  unpaywall.rs
src/state/: app_state.rs  commands.rs  mod.rs  undo.rs
src/state/commands/: library_helpers.rs  mod.rs  pdf_cache.rs  pdf_extract.rs  pdf_loading.rs
src/sync/: cloudkit_sync.rs  engine.rs  file_sync.rs  mod.rs  webdav.rs
src/ui/: chat_panel.rs  citation_dialog.rs  graph_view.rs  helpers.rs  import_export.rs  keybindings.rs  layout.rs  library_view.rs  markdown.rs  mod.rs  paper_detail.rs  pdf_viewer.rs  search_bar.rs  settings.rs  sidebar.rs  update_dialog.rs
src/ui/chat_panel/: message.rs  mod.rs  panel.rs  resize_handle.rs  toggle.rs
src/ui/components/: collection_tree_item.rs  confirm_dialog.rs  context_menu.rs  icon_button.rs  metadata_field.rs  mod.rs  modal.rs  path_field.rs  settings_field.rs  settings_select.rs  tag_badge.rs  toggle_switch.rs
src/ui/paper_detail/: detail.rs  fields.rs  mod.rs  multi_select.rs  notes.rs
src/ui/pdf/: annotation_panel.rs  annotation_render.rs  mod.rs  navigation.rs  page_overlay.rs  search_bar.rs  tab_bar.rs  toolbar.rs  viewer.rs
src/ui/settings/: appearance.rs  claude.rs  connector.rs  import.rs  library.rs  mod.rs  pdf_viewer.rs  sync.rs  update.rs
src/ui/sidebar/: collections.rs  context_menus.rs  main_sidebar.rs  mod.rs  nav.rs  open_pdf.rs  tags.rs
website/: package-lock.json  package.json
website/.svelte-kit/: ambient.d.ts
website/.svelte-kit/output/client/.vite/: manifest.json
website/.svelte-kit/output/client/_app/: version.json
website/.svelte-kit/output/client/_app/immutable/assets/: 0.D69otjra.css  2.VVm1Wjor.css
website/.svelte-kit/output/client/_app/immutable/chunks/: B1Aqya1z.js  CnWK571c.js  DCzVSsBz.js  DTSuRrcl.js  DuJl1Wdv.js  ruwM9ipk.js  sIFNlO3u.js
website/.svelte-kit/output/client/_app/immutable/nodes/: 1.DI2IBhOb.js  2.BjoxyAJW.js
website/.svelte-kit/output/prerendered/pages/: index.html
website/.svelte-kit/output/server/: manifest-full.js  manifest.js
website/.svelte-kit/output/server/.vite/: manifest.json
website/.svelte-kit/output/server/_app/immutable/assets/: _layout.DYkHpGUd.css  _page.BtjqziJT.css
website/.svelte-kit/output/server/chunks/: index.js  internal.js  renderer.js
website/.svelte-kit/output/server/entries/pages/: _layout.svelte.js  _page.svelte.js
website/.svelte-kit/output/server/nodes/: 0.js  1.js  2.js
website/src/: app.css  app.html
website/src/lib/: theme.ts
website/src/lib/components/: Download.svelte  Features.svelte  Footer.svelte  Hero.svelte  Nav.svelte  WhyRotero.svelte
website/src/routes/: +layout.svelte  +page.svelte
website/static/word/: taskpane.html  taskpane.js
word-addin/: manifest.xml  taskpane.css
