[workspace]
members = [
    "crates/rotero-models",
    "crates/rotero-pdf",
    "crates/rotero-bib",
    "crates/rotero-connector",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Internal crates
rotero-models = { path = "crates/rotero-models" }
rotero-pdf = { path = "crates/rotero-pdf" }
rotero-bib = { path = "crates/rotero-bib" }
rotero-connector = { path = "crates/rotero-connector" }

[package]
name = "rotero"
version.workspace = true
edition.workspace = true

[dependencies]
rotero-models.workspace = true
rotero-pdf.workspace = true
rotero-bib.workspace = true
rotero-connector.workspace = true

dioxus = { version = "0.6", features = ["desktop"] }
rfd = "0.14"
turso = "0.6.0-pre.15"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
directories = "6"
base64 = "0.22"
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
regex = "1"
