[workspace]
members = [
    "crates/rotero-models",
    "crates/rotero-pdf",
    "crates/rotero-search",
    "crates/rotero-bib",
    "crates/rotero-connector",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Internal crates
rotero-models = { path = "crates/rotero-models" }
rotero-pdf = { path = "crates/rotero-pdf" }
rotero-bib = { path = "crates/rotero-bib" }
rotero-search = { path = "crates/rotero-search" }
rotero-connector = { path = "crates/rotero-connector" }

[package]
name = "rotero"
version.workspace = true
edition.workspace = true

[dependencies]
rotero-models.workspace = true
rotero-pdf.workspace = true
rotero-bib.workspace = true
rotero-search.workspace = true
rotero-connector = { workspace = true, optional = true }

dioxus = "0.7"
rfd = { version = "0.14", optional = true }
turso = "0.6.0-pre.15"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
directories = { version = "6", optional = true }
base64 = "0.22"
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
apple-utils = { version = "0.1", optional = true }
regex = "1"
urlencoding = "2"

[features]
default = ["desktop"]
desktop = ["dioxus/desktop", "dep:rfd", "dep:rotero-connector", "dep:directories"]
mobile = ["dioxus/mobile", "dep:apple-utils"]
pdfium-static = ["rotero-pdf/static"]
