[workspace]
members = [
    "crates/rotero-models",
    "crates/rotero-pdf",
    "crates/rotero-search",
    "crates/rotero-bib",
    "crates/rotero-connector",
    "crates/rotero-graph",
    "crates/rotero-db",
    "crates/rotero-mcp",
    "crates/rotero-translate",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Internal crates
rotero-models = { path = "crates/rotero-models" }
rotero-pdf = { path = "crates/rotero-pdf" }
rotero-bib = { path = "crates/rotero-bib" }
rotero-search = { path = "crates/rotero-search" }
rotero-connector = { path = "crates/rotero-connector" }
rotero-graph = { path = "crates/rotero-graph" }
rotero-db = { path = "crates/rotero-db" }
rotero-mcp = { path = "crates/rotero-mcp" }
rotero-translate = { path = "crates/rotero-translate" }

[package]
name = "rotero"
version.workspace = true
edition.workspace = true

[dependencies]
rotero-models.workspace = true
rotero-pdf.workspace = true
rotero-bib.workspace = true
rotero-search.workspace = true
rotero-connector = { workspace = true, optional = true }
rotero-translate = { workspace = true, optional = true }
rotero-graph.workspace = true
rotero-db.workspace = true
rotero-mcp.workspace = true
rmcp = { version = "1", features = ["server", "transport-streamable-http-server"] }

dioxus = "0.7"
rfd = { version = "0.14", optional = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
directories = { version = "6", optional = true }
base64 = "0.22"
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
apple-utils = { version = "0.1", optional = true }
regex = "1"
urlencoding = "2"
which = "8.0.2"
pulldown-cmark = "0.13.3"
futures-util = "0.3"
libc = "0.2.184"
axum = "0.8"

[target.'cfg(target_vendor = "apple")'.dependencies]
objc2 = { version = "0.6", optional = true }
objc2-cloud-kit = { version = "0.3", optional = true }
objc2-foundation = { version = "0.3", optional = true }
block2 = { version = "0.6", optional = true }

[features]
default = ["desktop"]
desktop = ["dioxus/desktop", "dep:rfd", "dep:rotero-connector", "dep:rotero-translate", "dep:directories"]
mobile = ["dioxus/mobile", "dep:apple-utils"]
cloudkit = ["dep:objc2", "dep:objc2-cloud-kit", "dep:objc2-foundation", "dep:block2"]
pdfium-static = ["rotero-pdf/static"]
