[package]
name = "rotero-translate"
version.workspace = true
edition.workspace = true

[dependencies]
rotero-models.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
which = "8"
directories = "6"
